Fix word break in story title

--- a/app/assets/stylesheets/screen.scss
+++ b/app/assets/stylesheets/screen.scss
@@ -295,6 +295,7 @@ div.story-controls {
 }
 div.story-title {
   margin-left: 60px;
+  word-wrap: break-word;
 }
 .unestimated div.story-title {
   font-style: italic;
